# dao-paper-search-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: 2026-05-15-iaa-solr-probe.md  2026-05-15-initial-mvp.md  2026-05-15-paper-search-mcp-migration.md  2026-05-15-paper-search-mcp-pr-notes.md  2026-05-15-research-md-snippet.md  opencode-integration.md
src/dao_paper_search_mcp/: __init__.py  dedup.py  inline_citation.py  models.py  server.py
src/dao_paper_search_mcp/adapters/: adaj.py  arxiv.py  biorxiv.py  core.py  crossref.py  gnomon.py  iaa.py  ixtheo.py  openalex.py  openedition.py  propylaeum.py  semantic_scholar.py  zenodo.py  zenon.py
src/dao_paper_search_mcp/data/: authority_overrides.yml
src/dao_paper_search_mcp/resolvers/: gazetteer.py  wikidata_author.py
src/dao_paper_search_mcp/utils/: __init__.py  contact.py  doi.py
tests/: test_adaj.py  test_adapter_doi_coverage.py  test_arxiv.py  test_biorxiv.py  test_core.py  test_crossref.py  test_dedup.py  test_doi_normalization.py  test_gazetteer.py  test_gnomon.py  test_iaa.py  test_inline_citation.py  test_ixtheo.py  test_models.py  test_openalex.py  test_openedition.py  test_propylaeum.py  test_semantic_scholar.py  test_verification_suite.py  test_wikidata.py  test_zenodo.py  test_zenon.py
tests/fixtures/: adaj_search_negev.html  iaa_search_empty.html  iaa_search_with_results.html  openalex_yahalom_mack_2015.json
