[project]
name = "dao-paper-search-mcp"
version = "0.6.0"
description = "MCP server for DAO-centred research: Zenon DAI, IAA Publications, ADAJ, plus a curated cross-platform paper-search surface (Crossref, OpenAlex, Semantic Scholar, arXiv, CORE, Zenodo, bioRxiv) — every hit pre-renders an inline_citation block for verbatim agent copy."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Patrick Leiverkus", email = "patrick.leiverkus@uni-oldenburg.de" },
]
requires-python = ">=3.11"
keywords = ["mcp", "archaeology", "levant", "bibliography", "zenon-dai", "iaa", "adaj"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "mcp>=1.12",
    "httpx>=0.27",
    "pydantic>=2.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pyyaml>=6.0",
    "SPARQLWrapper>=2.0",
    "sruthi>=2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-vcr>=1.0",
    "respx>=0.21",
]

[project.scripts]
dao-paper-search-mcp = "dao_paper_search_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dao_paper_search_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: hits real upstream APIs; uses recorded VCR cassettes when present",
]
